fix: line height on wrapping

--- a/public/css/screen.less
+++ b/public/css/screen.less
@@ -202,14 +202,15 @@ a {
   }
 }
 
+h1, h2, h3, h4 {
+  font-weight: 400;
+  line-height: 1.1;
+}
+
 h1 {
   font-size: 180%;
   font-weight: 600;
   line-height: 42px;
-}
-
-h2, h3, h4 {
-  font-weight: 400;
 }
 
 h2 {
